# playground-model-api-mcp

./: README.md  pyproject.toml
agent/: Localsingleagent.py  singleagent.py
api/: app.py
mcp/: server.py
modeling/: model.joblib  train.ipynb
