[project]
name = "playground-model-api-mcp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.136.1",
    "gunicorn>=26.0.0",
    "ipykernel>=7.2.0",
    "matplotlib>=3.10.9",
    "mcp[cli]>=1.27.1",
    "pandas>=3.0.3",
    "pydantic>=2.13.4",
    "requests>=2.34.2",
    "scikit-learn>=1.8.0",
    "uvicorn>=0.47.0",
]
